--- a/index.css
+++ b/index.css
@@ -28,10 +28,12 @@ html{
 }
 
 #add-new-todo-button:active{
-  box-shadow: 1px 1px 1px #90A4AE;
+  box-shadow: 25px 25px 25px #90A4AE;
 }
 li{
     padding: 5px;
-    margin-bottom: 10px;
+    margin: 10px;
+
 }
+
 
