--- a/index.css
+++ b/index.css
@@ -28,12 +28,20 @@ html{
 }
 
 #add-new-todo-button:active{
-  box-shadow: 25px 25px 25px #90A4AE;
+  box-shadow: 1px 1px 1px #90A4AE;
 }
 li{
     padding: 5px;
     margin: 10px;
+    
 
+}
+
+h2{
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 32px;
+  margin: 20px 0px;
 }
 
 
