--- a/index.css
+++ b/index.css
@@ -1,47 +1,72 @@
 html{
-   
     font-family: sans-serif;
-    color: blue;
+    color:#fff;
+    background-color: #80ff80;
 }
 .pomodoro-estimate{
     
-    font-weight: bold;
+  font-weight: bold;
   color: #F44336;
   background-color: #F5F5F5;
   border-radius: 50px;
   font-size: 14px;
   padding: 5px 10px 5px 10px;
+  
 }
 
-#add-new-todo-button{
-  font-size: 20px;
+#Add-new-todo-button{
+  font-size: 20px; 
   text-align: center;
   color: #FFF;
   outline: none;
   border-style: none;
-  padding: 10px;
-  border-radius: 3px;
-  box-shadow: 2px 2px 1px #90A4AE;
+  padding: 3px;
+  border-radius: 1px;
+  box-shadow: 1px 1px 1px #90A4AE;
   display: block;
-  background-color: #03A9F4;
-  margin-top: 10px;
+  background-color: rgb(126, 252, 255) ;
+  margin-top: 3px;
 }
 
-#add-new-todo-button:active{
+#Add-new-todo-button:active{
   box-shadow: 1px 1px 1px #90A4AE;
+  
 }
 li{
     padding: 5px;
     margin: 10px;
-    
 
 }
 
-h2{
-  display: inline-block;
+.company-logo{
+    width: 6%;
+    height:6%;
+
+}
+
+li:hover{
+  background-color: #E1F5FE;
+  border-radius: 3px;
+}
+
+a{
+  text-decoration: none;
+  color: #424242;
   vertical-align: middle;
-  font-size: 32px;
-  margin: 20px 0px;
 }
 
 
+div{
+  width: 60%;
+  margin: 20px auto 0px auto;
+}
+
+input[type="text"], input[type="number"]{
+  font-size: 20px;
+  background-color: #FFF;
+  outline: none;
+  border-style: none;
+  padding: 5px;
+  border-radius: 3px;
+  box-shadow: 1px 1px 1px #90A4AE;
+}
