--- a/index.css
+++ b/index.css
@@ -60,8 +60,8 @@ a{
 }
 
 
-div{
-  width: 60%;
+new-todo-block{
+  width: 40%;
   margin: 20px auto 0px auto;
 }
 
@@ -73,4 +73,5 @@ input[type="text"], input[type="number"]{
   padding: 5px;
   border-radius: 3px;
   box-shadow: 1px 1px 1px #90A4AE;
+  
 }
